Fix diff mode guide text color in dark mode

--- a/front-end/src/components/Editor.module.css
+++ b/front-end/src/components/Editor.module.css
@@ -31,3 +31,15 @@
   margin: 10px;
   overflow: hidden;
 }
+
+.diffmode_guide {
+  font-family: sans-serif;
+  font-size: 17px;
+  padding: 15px;
+  margin: 10px;
+  overflow: hidden;
+}
+
+:global(.dark) .diffmode_guide {
+  color: #cfcec4;
+}
